; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/openbsm/test/bsm/extr_generate.c_generate_header32_token.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/openbsm/test/bsm/extr_generate.c_generate_header32_token.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@header32_token_len = common dso_local global i32 0, align 4
@header32_e_type = common dso_local global i32 0, align 4
@header32_e_mod = common dso_local global i32 0, align 4
@header32_tm = common dso_local global i32 0, align 4
@EX_UNAVAILABLE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"au_to_header32\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @generate_header32_token to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @generate_header32_token(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32, i32* @header32_token_len, align 4
  %7 = load i32, i32* @header32_e_type, align 4
  %8 = load i32, i32* @header32_e_mod, align 4
  %9 = load i32, i32* @header32_tm, align 4
  %10 = call i32* @au_to_header32_tm(i32 %6, i32 %7, i32 %8, i32 %9)
  store i32* %10, i32** %5, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %2
  %14 = load i32, i32* @EX_UNAVAILABLE, align 4
  %15 = call i32 @err(i32 %14, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  br label %16

16:                                               ; preds = %13, %2
  %17 = load i8*, i8** %3, align 8
  %18 = load i8*, i8** %4, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @write_token(i8* %17, i8* %18, i32* %19)
  ret void
}

declare dso_local i32* @au_to_header32_tm(i32, i32, i32, i32) #1

declare dso_local i32 @err(i32, i8*) #1

declare dso_local i32 @write_token(i8*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
